# rag-github-repo

./: .env-example  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/instructions/: vibecode-instruct.instructions.md
executors/nodejs/: Dockerfile  package.json  server.js
executors/python/: Dockerfile  server.py
src/: interface.py
src/agents/: __init__.py  assistant_agent.py  code_agent.py  orchestrator_agent.py  rag_agent.py  reformulation_agent.py  retrieval_agent.py  shared.py  web_agent.py
src/core/: database.py  settings.py
src/preprocessing/: chunk_splitter.py  document_parser.py  document_processor.py
